fix the f**k space escape
Signed-off-by: pengzhile <pengzhile@gmail.com>